refactor: toList() 변경
- java21에서 Collectors 사용하지 않아도 toList() 가능